RESOLVED FIXED75475
[GTK] Fix a runtime warning when hovering hyperlink auditing setting in MiniBroweser settings dialog
https://bugs.webkit.org/show_bug.cgi?id=75475
Summary [GTK] Fix a runtime warning when hovering hyperlink auditing setting in MiniB...
Carlos Garcia Campos
Reported 2012-01-03 08:28:59 PST
The problem is that the property blurb contains <a ping> and tree view uses gtk_tooltip_set_markup() internally, so we need to escape the text.
Attachments
Patch (2.01 KB, patch)
2012-01-03 08:31 PST, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2012-01-03 08:31:14 PST
Carlos Garcia Campos
Comment 2 2012-01-03 23:38:10 PST
Note You need to log in before you can comment on or make changes to this bug.