[GTK] Fix a runtime warning when hovering hyperlink auditing setting in MiniBroweser settings dialog https://bugs.webkit.org/show_bug.cgi?id=75475

Reviewed by Martin Robinson.

The problem is that the property blurb contains <a ping> and tree
view uses gtk_tooltip_set_markup() internally, so we need to
escape the text.

* MiniBrowser/gtk/BrowserSettingsDialog.c:
(browserSettingsDialogConstructed): Escape property blurb before
storing it in the GtkTreeModel.

Canonical link: https://commits.webkit.org/92305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104018 268f45cc-cd09-0410-ab3c-d52691b4dbfc